fixed dependencies!